--- a/style.css
+++ b/style.css
@@ -51,3 +51,15 @@ html {
   box-shadow: -0.2rem 0 0.5rem #555;
 }
 /* End: Sticks */
+
+/* Start: Rubber */
+.rubber {
+  width: 67rem;
+  height: 50rem;
+  background-color: red;
+  left: 16.5rem;
+  bottom: 24rem;
+  border-bottom: 1rem solid coral;
+  box-shadow: 0 1rem 0 #ddd;
+}
+/* End: Rubber */
