--- a/style.css
+++ b/style.css
@@ -25,12 +25,97 @@ html {
   border-radius: 5rem;
   box-shadow: 2rem 2rem 6rem #888;
   position: relative;
+  overflow: hidden;
 }
 
 .wrapper div {
   position: absolute;
 }
 /* End: Common Styles */
+
+/* Start: Keyframe Animations */
+@keyframes rubberAnim {
+  0%,
+  20% {
+    border-radius: 0;
+    transform: translateY(0);
+  }
+
+  50%,
+  60% {
+    border-radius: 0 0 35rem 35rem;
+    transform: translateY(23rem);
+  }
+
+  65%,
+  100% {
+    border-radius: 0;
+    transform: translateY(0);
+  }
+}
+
+@keyframes squareAnim {
+  0% {
+    transform: translateY(5rem);
+  }
+
+  20% {
+    transform: translateY(40rem);
+  }
+
+  50%,
+  60% {
+    transform: translateY(64.5rem);
+  }
+
+  62% {
+    transform: translateY(45rem);
+  }
+
+  80% {
+    transform: translateY(10rem) rotateZ(90deg);
+  }
+
+  100% {
+    transform: translateY(5rem) rotateZ(90deg);
+  }
+}
+
+@keyframes leftStickAnim {
+  0%,
+  30% {
+    transform: rotateZ(0);
+  }
+
+  50%,
+  65% {
+    transform: rotateZ(2deg);
+  }
+
+  80%,
+  100% {
+    transform: rotateZ(0);
+  }
+}
+
+@keyframes rightStickAnim {
+  0%,
+  30% {
+    transform: rotateZ(0);
+  }
+
+  50%,
+  65% {
+    transform: rotateZ(-2deg);
+  }
+
+  80%,
+  100% {
+    transform: rotateZ(0);
+  }
+}
+
+/* End: Keyframe Animations */
 
 /* Start: Sticks */
 .stick {
@@ -39,16 +124,19 @@ html {
   background-color: coral;
   border-radius: 1rem 1rem 0 0;
   bottom: 0;
+  transform-origin: bottom center;
 }
 
 .left-stick {
   left: 15rem;
   box-shadow: 0.2rem 0 0.5rem #555;
+  animation: leftStickAnim 2s infinite linear;
 }
 
 .right-stick {
   right: 15rem;
   box-shadow: -0.2rem 0 0.5rem #555;
+  animation: rightStickAnim 2s infinite linear;
 }
 /* End: Sticks */
 
@@ -56,11 +144,11 @@ html {
 .rubber {
   width: 67rem;
   height: 50rem;
-  background-color: red;
   left: 16.5rem;
   bottom: 24rem;
   border-bottom: 1rem solid coral;
   box-shadow: 0 1rem 0 #ddd;
+  animation: rubberAnim 2s infinite linear;
 }
 /* End: Rubber */
 
@@ -72,5 +160,6 @@ html {
   border-radius: 2rem;
   left: 44rem;
   box-shadow: 0 0 0.2rem #555;
+  animation: squareAnim 2s infinite linear;
 }
 /* End: Square */
